--- a/public/index.html
+++ b/public/index.html
@@ -200,6 +200,55 @@
       }
     };
 
+let typing = false;
+let typingTimeout;
+
+// Listen for input events on the message input field
+document.getElementById("messageInput").addEventListener("input", function () {
+  if (!typing) {
+    typing = true;
+    socket.emit("typing", { room: currentRoom, username });
+  }
+  clearTimeout(typingTimeout);
+  typingTimeout = setTimeout(() => {
+    typing = false;
+    socket.emit("stop typing", { room: currentRoom, username });
+  }, 1000);
+});
+
+// Listen for "typing" event from the server
+socket.on("typing", (data) => {
+  showTypingIndicator(data.username);
+});
+
+// Listen for "stop typing" event from the server
+socket.on("stop typing", (data) => {
+  hideTypingIndicator(data.username);
+});
+
+// Functions to display/hide typing indicator
+function showTypingIndicator(user) {
+  // Create the indicator element if it doesn't exist
+  let indicator = document.getElementById("typingIndicator");
+  if (!indicator) {
+    indicator = document.createElement("div");
+    indicator.id = "typingIndicator";
+    indicator.style.fontStyle = "italic";
+    indicator.style.margin = "5px";
+    // Append indicator at the bottom of the messages container
+    document.getElementById("messages").appendChild(indicator);
+  }
+  indicator.textContent = user + " is typing...";
+}
+
+function hideTypingIndicator(user) {
+  const indicator = document.getElementById("typingIndicator");
+  if (indicator) {
+    indicator.textContent = "";
+  }
+}
+
+
     /* ----- SOCKET.IO EVENTS ----- */
     socket.on("connect", () => console.log("Connected to server"));
     socket.on("disconnect", () => console.log("Disconnected from server"));
