--- a/public/profile.html
+++ b/public/profile.html
@@ -92,8 +92,8 @@
     </div>
     <h3>Update Your Profile</h3>
     <form id="profile-update-form">
-      <input type="text" id="full-name-input" placeholder="Full Name" required />
-      <input type="email" id="email-input" placeholder="Email" required />
+      <input type="text" id="full-name-input" placeholder="Full Name"  />
+      <input type="email" id="email-input" placeholder="Email"  />
       <label for="profile-picture-input">Upload Profile Picture:</label>
       <input type="file" id="profile-picture-input" accept="image/*" />
       <button type="submit">Update Profile</button>
