--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -81,7 +81,7 @@
     <div class="dashboard-section">
       <h2>Chat Rooms</h2>
       <p>Join an existing room or create a new one.</p>
-      <a href="chat.html" class="btn">Enter Chat Rooms</a>
+      <a href="index.html" class="btn">Enter Chat Rooms</a>
     </div>
     <div class="dashboard-section">
       <h2>Direct Messages</h2>
@@ -155,7 +155,7 @@
       }
       const dmRoom = generateDMRoomName(username, recipient);
       // Redirect to chat page with the DM room as a query parameter.
-      window.location.href = "chat.html?room=" + encodeURIComponent(dmRoom);
+      window.location.href = "index.html?room=" + encodeURIComponent(dmRoom);
     }
 
     // Logout user and redirect to landing page.
